# FerrisChat

./: Cargo.toml  README.md
src/: animation.rs  canvas.rs  carry.rs  components.rs  crab.rs  crab_ai.rs  direction.rs  disappearing.rs  entities.rs  lib.rs  main.rs  map.rs  movement.rs  point.rs  saveload_system.rs  state.rs  string_writer.rs  traits.rs  weapons.rs  world.rs
src/server/: main.rs  websocket_server.rs
static/: ferris_chat.html  index.html  rustacean.psd
videos/: ferris_chat_crab_animation.mov  ferris_chat_first_crabs.mov  ferris_chat_initial_chat.mov  ferris_chat_roguelike_state_share.mov  ferris_chat_synced_clients.mov
