[package]
name = "ferris_chat"
version = "0.1.0"
authors = ["James Fator <jamesfator@gmail.com>"]
edition = "2018"

[dependencies]
censor = "0.1.1"
compress = "0.2.1"
oorandom = "11.1.2"
serde = { version = "1.0.115", features = ["derive"] }
specs = { version = "0.16.1", features = ["serde"] }
specs-derive = "0.4.1"
serde_json = "^1.0.44"
stdweb = "0.4.20"


[[bin]]
name = "ferris_chat_client"
path = "src/main.rs"

[[bin]]
name = "server"
path = "src/server/main.rs"
edition = "2018"
