[package]
name = "ferris_chat"
version = "0.1.0"
authors = ["James Fator <jamesfator@gmail.com>"]
edition = "2018"

[dependencies]
censor = "0.1.1"
compress = "0.2.1"
futures = "0.3.5"
oorandom = "11.1.2"
serde = { version = "1.0.115", features = ["derive"] }
specs = { version = "0.16.1", features = ["serde"] }
specs-derive = "0.4.1"
serde_json = "^1.0.44"
stdweb = { version = "0.4.20", optional = true }
futures-util = { verion = "0.3.5", optional = true }
tokio = { verion = "0.2.22", features = ["io-std", "macros", "stream", "time"], optional = true }
tokio-tungstenite = { verion = "0.11.0", optional = true }
tungstenite = { verion = "0.11.1", optional = true }

[features]
client = ["stdweb"]
server = ["futures-util", "tokio", "tokio-tungstenite", "tungstenite"]

[[bin]]
name = "ferris_chat_client"
path = "src/main.rs"
required-features = ["client"]

[[bin]]
name = "server"
path = "src/server/main.rs"
required-features = ["server"]
